# opencad

./: .gitignore  Cargo.toml  Part.tres  README.md  Sketch.gd  icon.svg.import  main.tscn  parametric.gdextension  project.godot
opencad/: Cargo.toml
opencad/assets/shaders/: cad_shader.wgsl
opencad/src/: camera.rs  main.rs  ui.rs
parametric-engine/: Cargo.toml
parametric-engine/src/: lib.rs  sketch.rs
